--- a/example2.1 color/index.html
+++ b/example2.1 color/index.html
@@ -33,12 +33,12 @@
         <div id="container">
             <div id="overlay">
                 <div>
-                    <input type="range" id="count" name="count" min="1" max="50" value="10" step="1">
-                    <label for="count">Count</label>
+                    <input type="text" id="text" name="text" size="25" placeholder="Enter some text">
+                    <label for="height">Text</label>
                 </div>
                 <div>
-                    <input type="range" id="radius" name="radius" min="1" max="10" value="7" step="1">
-                    <label for="radius">Radius</label>
+                    <input type="range" id="count" name="count" min="1" max="50" value="10" step="1">
+                    <label for="count">Count</label>
                 </div>
 
             </div>
