--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./example1/">Example 1</a> – How to call RhinoCompute</li>
             <li><a href="./example2/">Example 2</a> – Remote Solving GH Definitions</li>
+            <li><a href="./example from 2.1 Terrain/">Example Studio & DATA MANAGEMENT Week 04</a> - Extends example 2 by adding landscape analyze.</li>
         </ul>
     </body>
 </html>
